examples/test/testpolicy10207.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10207
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key24: value21
      key27: value4
      key40: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value5
          key21: value48
          key28: value8
      podSelector:
        matchLabels:
          key34: value20
          key29: value28
